# arraycontext

./: .gitignore  .gitlab-ci.yml  .test-conda-env-py3.yml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  run-mypy.sh  run-pylint.sh  setup.cfg  setup.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
arraycontext/: __init__.py  context.py  fake_numpy.py  loopy.py  metadata.py  pytest.py  transform_metadata.py  typing.py  version.py
arraycontext/container/: __init__.py  arithmetic.py  dataclass.py  traversal.py
arraycontext/distributed/: __init__.py
arraycontext/impl/: __init__.py  pyopencl.py  pytato.py
arraycontext/impl/cupy/: __init__.py  fake_numpy.py
arraycontext/impl/jax/: __init__.py  fake_numpy.py
arraycontext/impl/numpy/: __init__.py  fake_numpy.py
arraycontext/impl/pyopencl/: __init__.py  fake_numpy.py  taggable_cl_array.py
arraycontext/impl/pytato/: __init__.py  compile.py  fake_numpy.py  outline.py  parallelize.py  utils.py
arraycontext/impl/pytato/batched_einsum/: __init__.py  utils.py
arraycontext/impl/pytato/split_actx/: __init__.py  utils.py
arraycontext/impl/torch/: __init__.py  fake_numpy.py
arraycontext/linalg/: solve.py
arraycontext/parameter_study/: __init__.py  transform.py
doc/: Makefile  array_context.rst  conf.py  container.rst  implementations.rst  index.rst  make_numpy_coverage_table.py  misc.rst  numpy_coverage.rst  other.rst  upload-docs.sh
examples/: advection.py  how_to_outline.py  parameter_study.py  stub.py  uncertain_prop.py
test/: test_arraycontext.py  test_batched_einsum_actx.py  test_pytato_arraycontext.py  test_pytato_parameter_study.py  test_utils.py  testlib.py
