[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63",
]

[project]
name = "arraycontext"
version = "2021.1"
description = "Choose your favorite numpy-workalike"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "immutabledict>=4.1",
    "numpy",
    "pytools>=2024.1.3",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4",
]
pyopencl = [
    "islpy>=2024.1",
    "loopy>=2024.1",
    "pyopencl>=2024.1",
]
pytato = [
    "pytato>=2021.1",
]
test = [
    "mypy",
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/arraycontext"
Homepage = "https://github.com/inducer/arraycontext"

[tool.setuptools.packages.find]
include = [
    "arraycontext*",
]

[tool.setuptools.package-dir]
# https://github.com/Infleqtion/client-superstaq/pull/715
"" = "."

[tool.setuptools.package-data]
pytools = [
    "py.typed",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "RUF", # ruff
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",   # McCabe complexity
    "E221",  # multiple spaces before operator
    "E226",  # missing whitespace around arithmetic operator
    "E402",  # module-level import not at top of file
    "UP006", # updated annotations due to __future__ import
    "UP007", # updated annotations due to __future__ import
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "jax",
    "loopy",
    "pymbolic",
    "pyopencl",
    "pytato",
    "pytools",
]
known-local-folder = [
    "arraycontext",
]
lines-after-imports = 2

[tool.mypy]
# TODO: unpin jax version on CI when this gets bumped to 3.10
python_version = "3.8"
warn_unused_ignores = true
# TODO: enable this
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "islpy.*",
    "loopy.*",
    "meshmode.*",
    "pymbolic",
    "pymbolic.*",
    "pyopencl.*",
    "jax.*",
]
ignore_missing_imports = true

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]
