[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arraycontext"
version = "2024.0"
description = "Choose your favorite numpy-workalike"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "immutabledict>=4.1",
    "numpy",
    "pytools>=2024.1.3",
    # for Self
    "typing_extensions>=4",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4",
]
pyopencl = [
    "islpy>=2024.1",
    "loopy>=2024.1",
    "pyopencl>=2024.1",
]
pytato = [
    "pytato>=2021.1",
]
test = [
    "mypy",
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/arraycontext"
Homepage = "https://github.com/inducer/arraycontext"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "RUF", # ruff
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "SIM",
]
extend-ignore = [
    "C90",   # McCabe complexity
    "E221",  # multiple spaces before operator
    "E226",  # missing whitespace around arithmetic operator
    "E402",  # module-level import not at top of file
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "jax",
    "loopy",
    "pymbolic",
    "pyopencl",
    "pytato",
    "pytools",
]
known-local-folder = [
    "arraycontext",
    "testlib",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"doc/conf.py" = ["I002"]
# To avoid a requirement of array container definitions being someplace importable
# from @dataclass_array_container.
"test/test_utils.py" = ["I002"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
# TODO: enable this
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "islpy.*",
    "loopy.*",
    "meshmode.*",
    "pymbolic",
    "pymbolic.*",
    "pyopencl.*",
    "jax.*",
]
ignore_missing_imports = true

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"
pythonVersion = "3.10"
pythonPlatform = "All"

[[tool.basedpyright.executionEnvironments]]
root = "test"
reportUnknownArgumentType = "hint"
reportUnknownMemberType = "hint"
reportUnknownVariableType = "hint"
reportUnknownParameterType = "hint"
reportMissingTypeArgument = "hint"
reportPrivateUsage = "none"
reportMissingTypeStubs = "hint"
reportAny = "hint"

